# phi-engine

./: .gitignore  LICENSE  README.md  __init__.py  analyzer.py  constants_db.py  core.py  engine.py  ladder.py  photosynthesis_constants.py  pyproject.toml
.github/workflows/: ci.yml
adapters/: __init__.py  base.py  calibration.py  photosynthesis.py  sensor_fusion.py
api/: __init__.py  schemas.py  server.py
demo/: Dockerfile  __init__.py  app.py  database.py  docker-compose.yml  entrypoint.sh  payment.py  webhook.py
notebooks/: 01_getting_started.ipynb  02_calibration_demo.ipynb
tests/: test_core.py  test_photosynthesis.py
